# taintinduce

./: .gitignore  .gitmodules  0000-compile-in-2025.patch  README.md  SQUIRREL_REPLACEMENT.md  debug_sleigh.py  justfile  patch.sh  pyproject.toml  read_taint_output.py  setup.py  taint_visualizer.py  test_serialization.py  trace.sh
.github/instructions/: json.instructions.md  python.instructions.md
static/: api.js  conditions.js  graph.js  index.html  mreplica.js  simulator.js  style.css  ui.js  utils.js  visualizer-new.js  visualizer.js
taintinduce/: isa_registers.py  memory.py  pypeekaboo.py  rule_utils.py  rules.py  serialization.py  state.py  state_utils.py  taintinduce.py  taintinduce_common.py  taintinduce_worker.py  train_trace.py  types.py
taintinduce/classifier/: categories.py  classifier.py  classifier_test.py
taintinduce/classifier/progression/: categorizer_test.py  input.csv  output.csv
taintinduce/cpu/: cpu.py  jn_cpu.py  unicorn_cpu.py
taintinduce/disassembler/: compat.py  exceptions.py  insn_info.py  insn_info_test.py
taintinduce/inference_engine/: condition_generator.py  dataflow_utils.py  dataflow_utils_test.py  inference.py  inference_flaw_fixes_test.py  inference_test.py  jn_integration_test.py  logic.py  observation_processor.py  partition_handler.py  partition_handler_test.py  refinement.py  test_validation_negative.py  unitary_flow_processor.py  unitary_flow_processor_test.py  validation.py  validation_test.py  x86_integration_test.py
taintinduce/instrumentation/: ast.py  instrument.py  instrument_test.py  test_monotonic_full.py  test_monotonic_simulation.py  test_mreplica_equiv.py
taintinduce/isa/: amd64.py  arm64.py  arm64_registers.py  isa.py  jn.py  jn_executor.py  jn_isa.py  jn_isa_test.py  jn_registers.py  register.py  x86.py  x86_registers.py
taintinduce/mreplica/: cell.py  mrepica.py
taintinduce/observation_engine/: float.py  observation.py  observation_test.py  strategy.py  strategy_test.py
taintinduce/rules/: conditions.py  conditions_test.py  rule_utils.py  rules.py
taintinduce/sleigh/: e2e_test.py  engine.py  engine_test.py  lifter.py  mapper.py  polarity.py  polarity_test.py  slicer.py
taintinduce/state/: state.py  state_test.py  state_utils.py
taintinduce/transpiler/: transpiler.py  transpiler_test.py
taintinduce/unicorn_cpu/: cpu.py  unicorn_cpu.py
taintinduce/visualizer/: taint_simulator.py  taint_simulator_test.py  unicorn_runner.py
visualizer/: __init__.py  taint_simulator.py
